Revision history for perl distribution DOCSIS-ConfigFile

0.72 Not Released
 - Add missing Types for TLV 202 #9

0.71 2016-12-11T10:08:41+0100
 - Fix encoding config with IpTos #jhthorsen/app-docsisious#2

0.70 2015-10-15T01:30:14+0200
 - Add support for decode_docsis \$path_to_file
 - Remove deprecated methods

0.69 2015-04-07T21:13:47Z
 - MtaConfigDelimiter is optional when creating MTA config files
 - Add support for eRouter MangemnetServer TLV #5 Contributor: Josh Galvez

0.68 2015-01-05T10:15:21Z
 - Add configuration tree structure to DOCSIS::ConfigFile::Syminfo pod
 - Require Perl 5.10.1

0.67 2015-01-05T02:34:42Z
 - Add test for handling of 0x0A value in VendorSpecific Contributor:
   dragic.dusan@gmail.com, RT#87812

0.66 2015-01-05T02:09:43Z
 - Fix SnmpCpeAccessControl should be uchar instead of uint Contributor:
   Josh Galvez, RT#99468
 - Use Digest::SHA instead of Digest::SHA1 Contributor:
   dragic.dusan@gmail.com, RT#87814

0.65 2015-01-05T02:01:30Z
 - New API: Will deprecate object oriented API with function based
 - Add decode_docsis() and encode_docsis()
 - Add DOCSIS related MIB files
 - Add debug output with DOCSIS_CONFIGFILE_DEBUG
 - Add support for string OID with optional SNMP.pm dependency

0.64 2013-08-16T23:33:13Z
 - Fix handling of 0x0a value in vendorspec()
 - Add support for VendorSpecific TLVs in Service Flow configuration.
   Contributor Dušan Dragić

0.6302 2013-07-25T21:56:00Z
 - Fix RT83013: Using the right value when checking high/low values

0.6301 2013-07-25T21:12:15Z
 - Fix RT87301: "return" binds stronger than "or". Contributor
   rurban@x-ray.at

0.63 2012-10-10T00:49:37Z
 - Fix RT72511 Contributor velladecin@hotmail.com

0.62 2012-04-29T10:56:44Z
 - Add SnmpCpeAccessControl to Syminfo Contributor: Elliot

0.61 2011-10-03T21:58:40Z
 - Fix RT70882: ServiceClassName need to be zero-terminated This is
   optional in input data structure and removed/not visible in decoded tree
   either

0.6004 2010-09-12T21:51:02Z